# misc-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: clickhouse_vm.sh  create_artifact_registry.sh  create_firestore_setup.sh  create_gcp_service_accounts.sh  create_gcs_bucket_layout.sh  create_networking.sh  setup_reference_fasta.sh
src/import/: download_hard_filtered_vcf.py  transfer_1000g_vcf.py  transfer_clinvar.py  transfer_giab_hg002_benchmark.py
